--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://containers-us-west-168.railway.app:7982/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/gal
 spring.datasource.username=root
-spring.datasource.password=71NXN36NgKmtEKFBVnJW
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.servlet.multipart.enabled=true
